Deploy config updates

--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "threejs-wireframe-wormhole",
+  "homepage": "https://ketan1406.github.io/threejs-earth/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "vite": "^6.0.1"
